fixed bleed

--- a/nav-foot.css
+++ b/nav-foot.css
@@ -1,8 +1,8 @@
 /* Styles for the navigation bar and footer and sections it separates it from the content */
-
 body {
   display: flex;
   flex-direction: column;
+  height:100%;
 }
 
 .content {
